# graphAnon

./: .gitignore  LICENSE.md  README.md  makefile
doc/: Doxyfile  references.bib
src/: CMakeLists.txt  graph.cpp  graph.h  label_distribution.cpp  label_distribution.h  label_distribution.test.cpp  label_distribution.test.h  main.cpp
src/labelled_graph/: CMakeLists.txt  label_distribution.cpp  label_distribution.h  label_distribution.test.cpp  label_distribution.test.h  labelled_graph.cpp  labelled_graph.h
src/unlabelled_graph/: CMakeLists.txt  unlabelled_graph.cpp  unlabelled_graph.h  unlabelled_graph.tpp
workloads/: data_sources.md  gml_to_edgelist.sh  paper_example.adjList  snam_example1.adjList  snam_example2.adjList
